# codex

codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/schema/json/v2/: DeviceKeyCreateParams.json  DeviceKeySignParams.json
codex-rs/app-server-protocol/schema/typescript/: ClientRequest.ts
codex-rs/app-server-protocol/schema/typescript/v2/: DeviceKeyCreateParams.ts  DeviceKeySignPayload.ts  DynamicToolSpec.ts  index.ts
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs  device_key_api.rs  in_process.rs  lib.rs  message_processor.rs
codex-rs/app-server/src/message_processor/: tracing_tests.rs
codex-rs/app-server/src/transport/: mod.rs
codex-rs/app-server/tests/suite/v2/: dynamic_tools.rs  mod.rs  thread_unsubscribe.rs
codex-rs/core/: models.json
codex-rs/core/src/tools/handlers/: dynamic.rs
codex-rs/core/tests/suite/: code_mode.rs  search_tool.rs
codex-rs/device-key/: Cargo.toml
codex-rs/device-key/src/: lib.rs  platform.rs
codex-rs/device-key/src/platform/: linux.rs  macos.rs  windows.rs
codex-rs/exec/src/: lib.rs  lib_tests.rs
codex-rs/protocol/src/: dynamic_tools.rs
codex-rs/tools/src/: tool_registry_plan.rs  tool_registry_plan_tests.rs
codex-rs/windows-sandbox-rs/src/: setup_orchestrator.rs
docs/architecture/: windows-sandbox-user-profile-acls.md
